--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4",
     "web-vitals": "^4.2.4"
@@ -39,6 +39,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3"
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "axios-mock-adapter": "^2.1.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1"
   }
 }
