--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.83.4",
     "web-vitals": "^4.2.4"
   },
@@ -46,7 +46,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^2.1.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^24.9.0",
     "jest": "^27.5.1"
   }
 }
