--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^24.9.0",
-    "jest": "^27.5.1"
+    "jest": "27.5.1"
   }
 }
