--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.5",
     "sass": "^1.83.4",
@@ -45,11 +45,9 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "react-router-dom": "^7.1.5"
+    "jest": "^29.7.0"
   }
 }
