--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+      "requireConfigFile": false
+    }
   },
   "browserslist": {
     "production": [
@@ -42,11 +46,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@testing-library/jest-dom": "^6.6.3",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
+    "babel-preset-react-app": "^10.1.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0"
   }
