--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/react": "^16.2.0",
     "axios": "^1.7.9",
@@ -11,13 +12,13 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.5",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.83.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env NODE_ENV=test react-scripts test",
     "eject": "react-scripts eject"
@@ -25,11 +26,25 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:react/recommended",
+      "plugin:jsx-a11y/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings"
     ],
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-      "requireConfigFile": false
+    "plugins": [
+      "react",
+      "jsx-a11y",
+      "import"
+    ],
+    "rules": {
+      "react/prop-types": "off",
+      "no-unused-vars": [
+        "warn",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
     }
   },
   "browserslist": {
@@ -45,15 +60,23 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/eslint-parser": "^7.26.8",
+    "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@testing-library/jest-dom": "^6.6.3",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
-    "babel-preset-react-app": "^10.1.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0"
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.32.0",
+    "jest": "^29.7.0",
+    "react-scripts": "^5.0.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)/"
+    ]
   }
 }
