--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "axios-mock-adapter": "^2.1.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -72,7 +73,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.32.0",
     "jest": "^29.7.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.2.5"
   },
   "jest": {
     "transformIgnorePatterns": [
